# zap

./: .gitignore  QUICK_INSTALL.md  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-desktop.yml  publish-cli.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  INSTALLATION.md  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  window_manager.rs
src-tauri/src/commands/: auth_commands.rs  box_commands.rs  dev_commands.rs  import_export_commands.rs  log_commands.rs  mod.rs  secret_commands.rs  settings_commands.rs  stats_commands.rs
src-tauri/src/models/: auth_model.rs  box_model.rs  dev_model.rs  error_model.rs  import_export_model.rs  log_model.rs  mod.rs  secret_model.rs  settings_model.rs
src-tauri/src/services/: auth_service.rs  crypto_service.rs  dev_service.rs  import_export_service.rs  mod.rs  storage_service.rs
src-tauri/src/states/: app_state.rs  dev_state.rs  mod.rs
src-tauri/src/utils/: mod.rs  path_resolvers.rs
src/commands/: authCommands.ts  boxCommands.ts  devCommands.ts  importExportCommands.ts  index.ts  logCommands.ts  secretCommands.ts  settingsCommands.ts  statsCommands.ts
src/components/: Accordion.tsx  ActiveSessionModal.tsx  ActiveSessionsBanner.tsx  BoxCard.tsx  BoxModal.tsx  Button.tsx  DevSessionModal.tsx  Fab.tsx  Input.tsx  ItemList.tsx  PasswordModal.tsx  SecretCard.tsx  SecretModal.tsx  SelectionModal.tsx  SessionTimer.tsx  ShortcutsTooltip.tsx  StatsBox.tsx  Toast.tsx  Toggle.tsx  index.ts
src/hooks/: index.ts  useGlobalSessionManager.ts  useKeyboard.ts  useSettings.ts
src/screens/: AuthScreen.tsx  BoxScreen.tsx  HomeScreen.tsx  LogsScreen.tsx  SettingsScreen.tsx  SplashScreen.tsx  index.ts
src/stores/: authStore.ts  boxStore.ts  bulkStore.ts  devStore.ts  importExportStore.ts  index.ts  logStore.ts  searchStore.ts  secretStore.ts  settingsStore.ts
src/types/: authTypes.ts  boxTypes.ts  devTypes.ts  errorTypes.ts  importExportTypes.ts  index.ts  logTypes.ts  secretTypes.ts  uiTypes.ts
src/utils/: index.ts
zap-cli/: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
zap-cli/zap_cli/: __init__.py  cli.py
