[package]
name = "zap"
version = "1.0.0"
description = "A Tauri App"
authors = ["hunter-arton"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "zap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
aes-gcm = "0.10.3"
argon2 = "0.5.3"
hex = "0.4.3"
rand = "0.9.2"
regex = "1.11.2"
thiserror = "2.0.17"
sled = "0.34.7"
tauri-plugin-global-shortcut = "2.3.0"
tokio = { version = "1.47.1", features = ["full"] }

[[bin]]
name = "Zap" 
path = "src/main.rs"
